@@ -1,3 +1,8 @@
+ags (3.7.27)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed AppStream XML
+
 ags (3.7.26)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
